[package]
name = "img2glyph"
version = "0.1.0"
edition = "2021"
description = "Convert scanned type specimens into individual named glyph PNGs"
license = "MIT OR Apache-2.0"

[lib]
name = "img2glyph"
path = "src/lib.rs"

[[bin]]
name = "img2glyph"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
# Enables async LLM labeling via the Claude API
llm = ["dep:tokio", "dep:reqwest", "dep:base64"]
# Enables the CLI binary; pulls in llm so the binary has the full feature set
cli = ["dep:clap", "llm"]

[dependencies]
image = "0.25"
imageproc = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap    = { version = "4", features = ["derive"], optional = true }
tokio   = { version = "1", features = ["full"],   optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
base64  = { version = "0.22",                      optional = true }
