[package]
name = "img2glyph"
version = "0.1.0"
edition = "2021"
description = "Convert scanned type specimens into individual named glyph PNGs"
license = "MIT OR Apache-2.0"

[lib]
name = "img2glyph"
path = "src/lib.rs"

[[bin]]
name = "img2glyph"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
image = "0.25"
imageproc = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"], optional = true }
